Bug 373842 - Cannot format closed files
Summary: Cannot format closed files
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Astyle (other bugs)
Version First Reported In: 5.0.3
Platform: Mint (Ubuntu based) Linux
: HI normal
Target Milestone: 5.0.4
Assignee: kdevelop-bugs-null
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-12-18 16:24 UTC by alex-rou
Modified: 2017-01-06 10:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alex-rou 2016-12-18 16:24:22 UTC
Trying to format files that are not opened in the editor results in "file already exist" errors. 

Using the appimage.
Comment 1 Kevin Funk 2017-01-06 09:30:44 UTC
Just ran into this. This basically renders 'Format files' useless. Quite an issue.
Comment 2 Kevin Funk 2017-01-06 10:12:33 UTC
Git commit b8062f736a2bf2eec098af531a7fda6ebcdc7cde by Kevin Funk.
Committed on 06/01/2017 at 10:12.
Pushed by kfunk into branch '5.0'.

SourceFormatterController: Fix 'Reformat files'

Broken by 119906, since 5.0.0. I take the blame, didn't review this patch properly...
FIXED-IN: 5.0.4

M  +4    -4    shell/sourceformattercontroller.cpp

https://commits.kde.org/kdevplatform/b8062f736a2bf2eec098af531a7fda6ebcdc7cde