SourceFormatterController: Fix 'Reformat files'

Broken by 119906, since 5.0.0. I take the blame, didn't review this patch properly...

BUG: 373842
FIXED-IN: 5.0.4